testsuite/poke.pkl/eq-structs-diag-2.pk
/* { dg-do compile } */

var i = Exception {}
        == "jorl"; /* { dg-error "invalid operand.*\n.*expected struct" } */
